aws_sg.tf
resource "aws_security_group" "docker_sg" {
  count       = local.is_aws ? 1 : 0
  name        = "${var.project_name}-docker-swarm-sg"
  description = "Security group para os nos do Docker Swarm"
  vpc_id      = aws_default_vpc.default_vpc[0].id

  egress {
    description = "Permitir todo o trafego de saida"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Permitir acesso HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [local.sg_default_cidr]
  }

  ingress {
    description = "Permitir acesso HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [local.sg_default_cidr]
  }

  ingress {
    description = "Permitir acesso SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [local.sg_default_cidr]
  }

  ingress {
    description = "Permitir acesso ao Portainer"
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = [local.sg_default_cidr]
  }

  ingress {
    description = "Permitir trafego de gerenciamento do Docker Swarm"
    from_port   = 2377
    to_port     = 2377
    protocol    = "tcp"
    cidr_blocks = [local.sg_default_cidr]
  }

  ingress {
    description = "Permitir trafego da rede overlay do Docker Swarm"
    from_port   = 4789
    to_port     = 4789
    protocol    = "udp"
    cidr_blocks = [local.sg_default_cidr]
  }

  ingress {
    description = "Permitir trafego VXLAN do Docker Swarm"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [local.sg_default_cidr]
  }
}
